fix beug width form collab on mobile

--- a/public/assets/css/collaboration.css
+++ b/public/assets/css/collaboration.css
@@ -663,7 +663,6 @@ form button[type="button"] {
     margin-left: 10px;
 }
 
-/* Custom File Input Styling */
 input[type="file"] {
     position: relative;
     width: 95%;
@@ -677,7 +676,6 @@ input[type="file"]::file-selector-button {
     display: block;
 }
 
-/* Center the file name text */
 input[type="file"]::-webkit-file-name-view-button {
     text-align: center;
     margin: 0 auto;
@@ -730,7 +728,6 @@ input[type="file"]::-webkit-file-upload-button:hover {
     background-color: #2bc2d9;
 }
 
-/* File Input Container Styling */
 .file-input-container {
     margin-bottom: 10px;
 }
@@ -749,7 +746,6 @@ input[type="file"]::-webkit-file-upload-button:hover {
     text-align: center;
 }
 
-/* Sidebar Form Centering */
 .members-list form {
     display: flex;
     flex-direction: column;
@@ -812,7 +808,7 @@ input[type="file"]::-webkit-file-upload-button:hover {
         position: fixed;
         top: 0;
         right: 0;
-        width: 80%;
+        width: 100%;
         height: 100%;
         background-color: #1e1e1e;
         z-index: 1000;
